Tests/CompilerTests/negative/ambiguous-implementation.expected
negative/ambiguous-implementation.hylo:3.1-6: error: ambiguous implementation of 'f'
given Void: P {
~~~~~
